Added doctors to specilization#show
