# config/routes.rb
@@ -5,14 +5,11 @@ Rails.application.routes.draw do
   namespace :api, default: {format: :json} do
     mount_devise_token_auth_for 'User', at: 'auth'
 
-    resources :specializations, only: [:index, :show, :create, :update, :destroy] do
-      resources :doctors, only: [:index, :show, :create, :update, :destroy]
-    end
-    
+    resources :specializations, only: [:index, :show, :create, :update, :destroy]
+    resources :doctors, only: [:index, :show, :create, :update, :destroy]
     resources :appointments
     get '/user_appointments', to: 'appointments#user_appointments'
     get '/doctor_appointments', to: 'appointments#doctor_appointments'
-    
   end
   # Defines the root path route ("/")
   # root "articles#index"
